--- a/main.css
+++ b/main.css
@@ -5,10 +5,15 @@ body {
 fieldset {
     margin-top: 1em;
     width: fit-content;
+    display: flex;
+    flex-direction: row;
+    column-gap: 2em;
+    row-gap: 1em;
+    flex-wrap: wrap;
 }
 
 fieldset button {
-    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 .flex {
