--- a/main.css
+++ b/main.css
@@ -54,3 +54,11 @@ fieldset button {
     width: 3em;
 }
 
+#message {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    padding: 0.5em;
+    background-color: white;
+    color: black;
+}
+
