--- a/main.css
+++ b/main.css
@@ -76,6 +76,11 @@ fieldset {
     margin-bottom: 1em;
 }
 
+#overlay {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
 #copyMeasureFrom, #copyMeasureTo {
     width: 3em;
 }
