--- a/main.css
+++ b/main.css
@@ -40,19 +40,10 @@ fieldset {
     flex-wrap: wrap;
 }
 
-#measuresToPlay {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    display: flex;
-    flex-direction: row;
-    column-gap: 1em;
-    row-gap: 1em;
-    flex-wrap: wrap;
-}
-
 #rhythm,
 #tempo,
-#volume {
+#volume,
+#reverbWet {
     display: flex;
     flex-direction: row;
     column-gap: 1em;
@@ -63,6 +54,10 @@ fieldset {
 }
 
 #volumeSlider {
+    width: 15em;
+}
+
+#reverbSlider {
     width: 15em;
 }
 
