--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@ fieldset {
     width: 1000px;
     margin-top: 1em;
     margin-bottom: 1em;
+    touch-action: none;
 }
 
 #overlay {
@@ -107,5 +108,6 @@ fieldset {
     padding: 0%;
     height: 100%;
     width: 100%;
+    touch-action: none;
 }
 
