--- a/main.css
+++ b/main.css
@@ -105,7 +105,7 @@ fieldset {
     border: 1px solid black;
     margin: 0%;
     padding: 0%;
-    height: 95%;
+    height: 90vh;
     width: 100%;
     touch-action: none;
 }
