--- a/main.css
+++ b/main.css
@@ -76,6 +76,7 @@ fieldset {
     width: 1000px;
     margin-top: 1em;
     margin-bottom: 1em;
+    background: transparent;
 }
 
 #copyMeasureFrom, #copyMeasureTo {
