--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@ fieldset {
     width: 1000px;
     margin-top: 1em;
     margin-bottom: 1em;
+    z-index: 0;
 }
 
 #overlay {
@@ -77,6 +78,7 @@ fieldset {
     margin-top: 1em;
     margin-bottom: 1em;
     background: transparent;
+    z-index: 1;
 }
 
 #copyMeasureFrom, #copyMeasureTo {
@@ -106,7 +108,7 @@ fieldset {
     border: 1px solid black;
     margin: 0%;
     padding: 0%;
-    height: 90vh;
+    height: 85vh;
     width: 100%;
     touch-action: none;
 }
