--- a/main.css
+++ b/main.css
@@ -77,6 +77,7 @@ fieldset {
     color: red;
     height: 400px;
     width: 1000px;
+    display: none;
     margin-top: 1em;
     margin-bottom: 1em;
     z-index: 1;
