--- a/main.css
+++ b/main.css
@@ -62,6 +62,7 @@ fieldset {
 }
 
 #pattern {
+    position: relative;
     background-color: white;
     color: black;
     border: 1px solid black;
@@ -73,7 +74,8 @@ fieldset {
 }
 
 #overlay {
-    background-color: red;
+    position: absolute;
+    background-color: rgba(255, 0, 0, 0.5); /* Red with 50% transparency */
     color: red;
     height: 400px;
     width: 1000px;
@@ -81,8 +83,6 @@ fieldset {
     margin-top: 1em;
     margin-bottom: 1em;
     z-index: 1;
-    opacity: 0.5;
-    filter: alpha(opacity=50); /* For IE8 and earlier */
 }
 
 #copyMeasureFrom, #copyMeasureTo {
