--- a/main.css
+++ b/main.css
@@ -63,7 +63,7 @@ fieldset {
 
 #pattern {
     position: relative;
-    background-color: white;
+    background-color: transparent !important;
     color: black;
     border: 1px solid black;
     height: 400px;
@@ -75,15 +75,15 @@ fieldset {
 
 #overlay {
     position: absolute;
-    background-color: rgba(255, 0, 0, 0.5); /* Red with 50% transparency */
-    color: red;
-    height: 1px;
+    background-color: rgba(255, 0, 0, 0.5);
     width: 1px;
-    display: none;
-    margin-top: 1em;
-    margin-bottom: 1em;
+    height: 1px;
     z-index: 1;
+    pointer-events: none;
+    border: 2px solid blue; /* Debug border */
+    contain: strict;
 }
+
 
 #copyMeasureFrom, #copyMeasureTo {
     width: 3em;
