--- a/main.css
+++ b/main.css
@@ -61,15 +61,20 @@ fieldset {
     width: 15em;
 }
 
+#patternContainer {
+    position: relative;
+    display: inline-block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
 #pattern {
     position: relative;
-    background-color: transparent !important;
+    background-color: white;
     color: black;
     border: 1px solid black;
     height: 400px;
     width: 1000px;
-    margin-top: 1em;
-    margin-bottom: 1em;
     z-index: 0;
 }
 
