--- a/main.css
+++ b/main.css
@@ -76,6 +76,11 @@ fieldset {
     height: 400px;
     width: 1000px;
     z-index: 0;
+
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    /* Optionally, */
+    will-change: transform;
 }
 
 #overlay {
