--- a/main.css
+++ b/main.css
@@ -63,6 +63,7 @@ fieldset {
 
 #patternContainer {
     position: relative;
+    z-index: 0;
     display: inline-block;
     margin-top: 1em;
     margin-bottom: 1em;
@@ -88,10 +89,11 @@ fieldset {
     background-color: rgba(255, 0, 0, 0.5);
     width: 1px;
     height: 1px;
-    z-index: 1;
+    z-index: 1000;
     pointer-events: none;
     border: 2px solid blue; /* Debug border */
-    contain: strict;
+    /* contain: strict; */
+    transform: translateZ(0);
 }
 
 
