More euclidean rhythms can now be combined for one instrument

--- a/main.css
+++ b/main.css
@@ -167,3 +167,9 @@ fieldset {
     row-gap: 1em;
     flex-wrap: wrap;
 }
+
+#euclideanInfo {
+    width: 95%;
+    height: fit-content;
+    text-align: left;
+}
